--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 !.vscode/extensions.json
 *.code-workspace
 
+debug.log
+
 ### VisualStudioCode Patch ###
 # Ignore all local history of files
 .history
